--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 </h2>
                 <address class="contacts-address">
                     <ul class="list-reset contacts-list flex">
-                        <li class="contacts-item flex">
+                        <li class="contacts-item flex contacts-item-address">
                             <strong class="contacts-items-caption">
                                 Visit Us
                             </strong>
@@ -280,7 +280,7 @@
                                 Duis autem vel eum iriure dolor in&nbsp;hendrerit in&nbsp;vulputate velit.
                             </p>
                         </li>
-                        <li class="contacts-item flex">
+                        <li class="contacts-item flex contacts-item-call">
                             <strong class="contacts-items-caption">
                                 Call Us
                             </strong>
@@ -291,7 +291,7 @@
                                 +7 (123) 456-78-90
                             </a>
                         </li>
-                        <li class="contacts-item flex">
+                        <li class="contacts-item flex contacts-item-mail">
                             <strong class="contacts-items-caption">
                                 Email Us
                             </strong>
@@ -324,16 +324,16 @@
                 <nav class="footer-nav">
                     <ul class="list-reset footer-list flex">
                         <li class="footer-item">
-                            <a href="#" class="footer-list">About Us</a>
+                            <a href="#" class="footer-link">About Us</a>
                         </li>
                         <li class="footer-item">
-                            <a href="#" class="footer-list">Contact Us</a>
+                            <a href="#" class="footer-link">Contact Us</a>
                         </li>
                         <li class="footer-item">
-                            <a href="#" class="footer-list">Privacy Policy</a>
+                            <a href="#" class="footer-link">Privacy Policy</a>
                         </li>
                         <li class="footer-item">
-                            <a href="#" class="footer-list">Terms Condition</a>
+                            <a href="#" class="footer-link">Terms Condition</a>
                         </li>
                     </ul>
                 </nav>
