--- a/index.html
+++ b/index.html
@@ -306,8 +306,33 @@
                 </address>
             </div>
         </section>
-        <!-- <section id="join-us" class="join-us">
-        </section> -->
+        <section id="join-us" class="join-us section-offset">
+            <div class="container">
+                <h2 class="secion-title join-us-title">Join us</h2>
+                <p class="section-descr join-us-descr">Take control of your paid subscriptions today!</p>
+                <form action="https://jsonplaceholder.typicode.com/posts" method="post" class="form">
+                    <div class="form-top">
+                        <div class="form-left">
+                            <input class="form-input" type="text" name="" placeholder="name" required>
+                            <input class="form-input" type="email" name="email" placeholder="email" required>
+                            <input class="form-input" type="tel" name="phone" placeholder="phone" required>
+                            <select class="form-select" name="country">
+                                <option value="Country" disabled selected>Country</option>
+                                <option value="United Kingdom">United Kingdom</option>
+                                <option value="United States">United States</option>
+                                <option value="France">France</option>
+                                <option value="Germany">Germany</option>
+                                <option value="Spain">Spain</option>
+                                <option value="Estonia">Estonia</option>
+                            </select>
+                        </div>
+                        <div class="form-right">
+                            <textarea class="form-textarea" name="comment" placeholder="Comment"></textarea>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </section>
     </main>
 
     <footer class="footer">
