--- a/index.html
+++ b/index.html
@@ -330,6 +330,15 @@
                             <textarea class="form-textarea" name="comment" placeholder="Comment"></textarea>
                         </div>
                     </div>
+                    <div class="form-bottom">
+                        <div class="form-wrapper">
+                            <button class="btn btn-reset form-btn">Get Started</button>
+                            <label class="form-check">
+                                <input type="checkbox" required>
+                                I agree with the <a href="#">user agreement</a>
+                            </label>
+                        </div>
+                    </div>
                 </form>
             </div>
         </section>
